Delete Family Endpoint
