# src/PoopNPour.Api/swagger.json
@@ -634,6 +634,41 @@
           }
         }
       },
+      "delete": {
+        "tags": [
+          "Families"
+        ],
+        "summary": "Delete family",
+        "description": "Delete a family and all related data",
+        "operationId": "DeleteFamilyAsync",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": { }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      },
       "get": {
         "tags": [
           "Families"
